# console_canvas

./: CMakeLists.txt  Point.h  console_canvas.pro  main.cpp
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  main.cpp
include/console_canvas/: Box.h  Canvas.h  Color.h  Factory.h  FillStyle.h  Persistent.h  Point.h  Scene.h  Shape.h  SimpleFillStyle.h  SimpleStrokeStyle.h  StrokeStyle.h  cxx_exception.h  def_prop_class.h  defs.h  point_and_size.h
include/console_canvas/shapes/: Boolean.h  Circle.h  Polygon.h  Rectangle.h  Triangle.h
src/: CMakeLists.txt  Canvas.cpp  Scene.cpp  SimpleFillStyle.cpp  SimpleStrokeStyle.cpp  main.cpp
src/shapes/: Boolean.cpp  Boolean_persist.cpp  Circle.cpp  Circle_persist.cpp  Polygon.cpp  Polygon_persist.cpp  Rectangle.cpp  Rectangle_persist.cpp  Triangle.cpp  Triangle_persist.cpp
tests/: CMakeLists.txt  test_Scene_all_figures_persistent.cpp  test_Scene_bool.cpp  test_Scene_persistent.cpp  test_Scene_polygon_circle.cpp  test_Scene_triangle_rectangle.cpp  test_canvas.cpp  test_point.cpp
